[gd_scene load_steps=6 format=3 uid="uid://clch2yxyul68v"]

[ext_resource type="Script" uid="uid://bm6aig0jm2vdg" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://m682mq2cjo0g" path="res://projectile.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dcd01sfojbb3i" path="res://Player.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://btj8qdktftdrd" path="res://UI.tscn" id="4_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")
projectile_scene = ExtResource("2_0xm2m")

[node name="Player" parent="." instance=ExtResource("3_h2yge")]

[node name="ProjectileTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="ProjectilePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0xm2m")

[node name="ProjectileSpawnLocation" type="PathFollow2D" parent="ProjectilePath"]

[node name="UI" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_projectile_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="UI" to="." method="new_game"]
